5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3986/executions/1590_1017.log
== SUBMITION (2019-03-23 16:54:18) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Latitude de P1: ")))
t2 = radians(float(input("Latitude de P1: ")))
g2 = radians(float(input("Latitude de P1: ")))
R= 6371.01 
d= R * arcos(sen(t1) * sen(t2) + cos(t1) * cos(t2) * cos(g1 - g2))
print(round(d, 2))

-- EXECUTION TIME:
0.143611
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1590/1017/main.py", line 5, in <module>
    t1 = radians(float(input()))
NameError: name 'radians' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 16:54:32) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Latitude de P1: ")))
t2 = radians(float(input("Latitude de P1: ")))
g2 = radians(float(input("Latitude de P1: ")))
R= 6371.01 
d= R * arcos(sen(t1) * sen(t2) + cos(t1) * cos(t2) * cos(g1 - g2))
print(round(d, 2))

-- EXECUTION TIME:
0.131766
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1590/1017/main.py", line 10, in <module>
    d= R * arcos(sen(t1) * sen(t2) + cos(t1) * cos(t2) * cos(g1 - g2))
NameError: name 'arcos' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 16:54:34) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Latitude de P1: ")))
t2 = radians(float(input("Latitude de P1: ")))
g2 = radians(float(input("Latitude de P1: ")))
R= 6371.01 
d= R * arcos(sen(t1) * sen(t2) + cos(t1) * cos(t2) * cos(g1 - g2))
print(round(d, 2))

-- EXECUTION TIME:
0.184767
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1590/1017/main.py", line 10, in <module>
    d= R * arcos(sen(t1) * sen(t2) + cos(t1) * cos(t2) * cos(g1 - g2))
NameError: name 'arcos' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 16:54:35) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Latitude de P1: ")))
t2 = radians(float(input("Latitude de P1: ")))
g2 = radians(float(input("Latitude de P1: ")))
R= 6371.01 
d= R * arcos(sen(t1) * sen(t2) + cos(t1) * cos(t2) * cos(g1 - g2))
print(round(d, 2))

-- EXECUTION TIME:
0.135788
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1590/1017/main.py", line 10, in <module>
    d= R * arcos(sen(t1) * sen(t2) + cos(t1) * cos(t2) * cos(g1 - g2))
NameError: name 'arcos' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 16:54:35) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Latitude de P1: ")))
t2 = radians(float(input("Latitude de P1: ")))
g2 = radians(float(input("Latitude de P1: ")))
R= 6371.01 
d= R * arcos(sen(t1) * sen(t2) + cos(t1) * cos(t2) * cos(g1 - g2))
print(round(d, 2))

-- EXECUTION TIME:
0.119391
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1590/1017/main.py", line 10, in <module>
    d= R * arcos(sen(t1) * sen(t2) + cos(t1) * cos(t2) * cos(g1 - g2))
NameError: name 'arcos' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 16:54:35) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Latitude de P1: ")))
t2 = radians(float(input("Latitude de P1: ")))
g2 = radians(float(input("Latitude de P1: ")))
R= 6371.01 
d= R * arcos(sen(t1) * sen(t2) + cos(t1) * cos(t2) * cos(g1 - g2))
print(round(d, 2))

-- EXECUTION TIME:
0.0914021
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1590/1017/main.py", line 10, in <module>
    d= R * arcos(sen(t1) * sen(t2) + cos(t1) * cos(t2) * cos(g1 - g2))
NameError: name 'arcos' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 16:54:36) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Latitude de P1: ")))
t2 = radians(float(input("Latitude de P1: ")))
g2 = radians(float(input("Latitude de P1: ")))
R= 6371.01 
d= R * arcos(sen(t1) * sen(t2) + cos(t1) * cos(t2) * cos(g1 - g2))
print(round(d, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    d= R * arcos(sen(t1) * sen(t2) + cos(t1) * cos(t2) * cos(g1 - g2))
NameError: name 'arcos' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 16:54:43) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Latitude de P1: ")))
t2 = radians(float(input("Latitude de P1: ")))
g2 = radians(float(input("Latitude de P1: ")))
R= 6371.01 
d= R * arcos(sen(t1) * sen(t2) + cos(t1) * cos(t2) * cos(g1 - g2))
print(round(d, 2))

-- EXECUTION TIME:
0.145439
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1590/1017/main.py", line 10, in <module>
    d= R * arcos(sen(t1) * sen(t2) + cos(t1) * cos(t2) * cos(g1 - g2))
NameError: name 'arcos' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 16:55:10) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Latitude de P1: ")))
t2 = radians(float(input("Latitude de P1: ")))
g2 = radians(float(input("Latitude de P1: ")))
R= 6371.01 
d= R * acos(sin(t1) * sin(t2) + cos(t1) * cos(t2) * cos(g1 - g2))
print(round(d, 2))

-- EXECUTION TIME:
0.124851
-- TEST CASE 1:
---- input:
-3.036131
-60.04585
-3.088496
-59.59464
---- correct output:
50.44
---- user output:
50.44
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 14:26:50) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de P1: ")))
t2 = radians(float(input("Latitude de P2: ")))
g2 = radians(float(input("Longitude de P2: ")))
R= 6371.01 
d= R * acos(sin(t1) * sin(t2) + cos(t1) * cos(t2) * cos(g1 - g2))
print(round(d, 2))

-- EXECUTION TIME:
0.153562
-- TEST CASE 1:
---- input:
-3.036131
-60.04585
-3.088496
-59.59464
---- correct output:
50.44
---- user output:
50.44
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
